--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,16 @@
 <resources>
-    <string name="app_name">AbstractApp</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+	<string name="app_name">AbstractApp</string>
+	<string name="title_home">Home</string>
+	<string name="title_list">List</string>
+	<string name="title_dashboard">Dashboard</string>
+	<string name="title_notifications">Notifications</string>
+	<string name="title_image_crop">Image Crop</string>
+	<string name="camera">Camera</string>
+	<string name="save">Save</string>
+	<string name="permission_request_denied">Permission request denied</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="to_list">To list fragment</string>
+	<string name="retry">retry</string>
+
+	<string name="channel_name">abstractapp</string>
 </resources>
